remove redundant tag_format input

--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -15,9 +15,12 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 3.1.100
+      - name: Build
+          run: dotnet build
+      - name: Test
+          run: dotnet test
       - name: Publish if version is updated
         uses: rohith/publish-nuget@v1
         with: # All inputs are optional (details given below)
           project_dir: src/PasswordCheck # Defaults to repository root
-          tag_format: v* # [*] gets replaced with version
           nuget_key: ${{secrets.NUGET_API_KEY}} # nuget.org API key
