--- a/src/PasswordCheck/PasswordCheck.csproj
+++ b/src/PasswordCheck/PasswordCheck.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Nullable>enable</Nullable>
@@ -11,6 +11,7 @@
     <RepositoryUrl>https://github.com/cuzzlor/password-check</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
