Update nuget package description to make it consistent with the readme

--- a/src/PasswordCheck/PasswordCheck.csproj
+++ b/src/PasswordCheck/PasswordCheck.csproj
@@ -6,12 +6,12 @@
     <Authors>Sam Curry</Authors>
     <Company />
     <Product />
-    <Description>BreachedPasswordService uses the HIBP range search to find how many times a password has appeared in a known breach.</Description>
+    <Description>IBreachedPasswordService calls the HIBP (haveibeenpwned.com) range search API and returns the number of times a password has appeared in a known data breach.</Description>
     <PackageProjectUrl></PackageProjectUrl>
     <RepositoryUrl>https://github.com/cuzzlor/password-check</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
