--- a/src/PasswordCheck/PasswordCheck.csproj
+++ b/src/PasswordCheck/PasswordCheck.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Nullable>enable</Nullable>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <Authors>Sam Curry</Authors>
     <Company />
     <Product />
@@ -11,7 +10,9 @@
     <RepositoryUrl>https://github.com/cuzzlor/password-check</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
+    <PackageTags>HIBP haveibeenpwned api.pwnedpasswords.com breached passwords password data breach</PackageTags>
+    <PackageReleaseNotes>Added support for netstandard2.0 and net461 targets.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
