--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master # Your default release branch
 jobs:
-  publish:
+  build-test-publish:
     name: publish to nuget
     runs-on: windows-latest
     steps:
