--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,9 +1,11 @@
 name: build + test
 
-on: [push]
+on:
+  push:
+    branches: '!master'
 
 jobs:
-  build:
+  build-test:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v1
