--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -2,7 +2,9 @@ name: build + test
 
 on:
   push:
-    branches: '!master'
+    branches: # only run on not-master branch
+      - '*'
+      - '!master'
 
 jobs:
   build-test:
