--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -1,8 +1,8 @@
 name: build + test + publish
 on:
-  pull_request:
-    branches: [master]
-    types: [closed]
+  push:
+    branches:
+    - master
 jobs:
   build-test-publish:
     name: publish to nuget
