--- a/src/PasswordCheck/PasswordCheck.csproj
+++ b/src/PasswordCheck/PasswordCheck.csproj
@@ -5,18 +5,19 @@
     <Authors>Sam Curry</Authors>
     <Company />
     <Product />
-    <Description>IBreachedPasswordService calls the HIBP (haveibeenpwned.com) range search API and returns the number of times a password has appeared in a known data breach.</Description>
+    <Description>IBreachedPasswordService calls the HIBP (haveibeenpwned.com) range search API and returns the number of times a password has appeared in a known data breach. IForbiddenPasswordService uses locally configured (via config or text file) regex patterns to check for forbidden passwords</Description>
     <PackageProjectUrl></PackageProjectUrl>
     <RepositoryUrl>https://github.com/cuzzlor/password-check</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-    <Version>1.0.2</Version>
-    <PackageTags>HIBP haveibeenpwned api.pwnedpasswords.com breached passwords password data breach</PackageTags>
-    <PackageReleaseNotes>Added support for netstandard2.0 and net461 targets.</PackageReleaseNotes>
+    <Version>1.0.3</Version>
+    <PackageTags>HIBP haveibeenpwned api.pwnedpasswords.com breached passwords password data breach check forbidden regex regular expression</PackageTags>
+    <PackageReleaseNotes></PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
