--- a/test/PasswordCheck.Tests/PasswordCheck.Tests.csproj
+++ b/test/PasswordCheck.Tests/PasswordCheck.Tests.csproj
@@ -26,4 +26,19 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="TestFixture.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="ForbiddenPasswords.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
