--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -1,12 +1,12 @@
-name: publish to nuget
+name: build + test + publish
 on:
   push:
     branches:
-      - master # Your default release branch
+    - master
 jobs:
-  publish:
+  build-test-publish:
     name: publish to nuget
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
         with:
