--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,12 +1,14 @@
 name: build + test
 
-on: [push]
+on:
+  push:
+    branches: # only run on not-master branch
+      - '*'
+      - '!master'
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  build-test:
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v1
     - name: Setup .NET Core
