--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -1,12 +1,12 @@
-name: publish to nuget
+name: build + test + publish
 on:
   push:
     branches:
-      - master # Your default release branch
+    - master
 jobs:
-  publish:
+  build-test-publish:
     name: publish to nuget
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
         with:
@@ -23,4 +23,5 @@ jobs:
         uses: rohith/publish-nuget@v1
         with: # All inputs are optional (details given below)
           project_dir: src/PasswordCheck # Defaults to repository root
+          tag_format: v* # [*] gets replaced with version
           nuget_key: ${{secrets.NUGET_API_KEY}} # nuget.org API key
